--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -66,7 +66,7 @@
             </form>
             
             <div class="auth-footer">
-                Don't have an account? <a href="{{ url_for('auth.signup') }}">Sign up</a>
+                Don't have an account? <a href="{{ url_for('auth.register') }}">Sign up</a>
             </div>
         </div>
         <div class="card-footer text-center py-3 bg-light">
