--- a/templates/auth/signup.html
+++ b/templates/auth/signup.html
@@ -106,7 +106,7 @@
             </div>
             {% endif %}
 
-            <form action="{{ url_for('auth.signup') }}" method="post" class="auth-form" novalidate>
+            <form action="{{ url_for('auth.register') }}" method="post" class="auth-form" novalidate>
                 <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                 
                 <div class="row g-3">
