--- a/templates/base.html
+++ b/templates/base.html
@@ -193,7 +193,7 @@
                             </a>
                         </li>
                         <li class="nav-item d-none d-lg-block">
-                            <a class="btn btn-primary" href="{{ url_for('auth.signup') }}">
+                            <a class="btn btn-primary" href="{{ url_for('auth.register') }}">
                                 <i class="fas fa-user-plus me-1"></i> Sign Up
                             </a>
                         </li>
@@ -253,7 +253,7 @@
                         <li class="mb-2"><a href="{{ url_for('auth.profile') }}" class="text-muted text-decoration-none hover-text-white">My Profile</a></li>
                         {% else %}
                         <li class="mb-2"><a href="{{ url_for('auth.login') }}" class="text-muted text-decoration-none hover-text-white">Login</a></li>
-                        <li class="mb-2"><a href="{{ url_for('auth.signup') }}" class="text-muted text-decoration-none hover-text-white">Sign Up</a></li>
+                        <li class="mb-2"><a href="{{ url_for('auth.register') }}" class="text-muted text-decoration-none hover-text-white">Sign Up</a></li>
                         {% endif %}
                     </ul>
                 </div>
