Updated ideas and removed chess from signup

--- a/templates/auth/signup.html
+++ b/templates/auth/signup.html
@@ -211,7 +211,7 @@
                     <h3 class="my-0">
                         <i class="fas fa-user-plus me-2"></i>Create Your Account
                     </h3>
-                    <p class="mb-0 mt-2">Join our chess community today</p>
+                    <p class="mb-0 mt-2">Join our community today</p>
                 </div>
                 <div class="card-body p-5">
                     <!-- Error Message -->
